add github hosted vizwit scripts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/backbone.modal/1.1.5/backbone.modal-min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/backbone.modal/1.1.5/backbone.modal.theme-min.css">
-    <link rel="stylesheet" href="http://localhost:8080/styles/main.css">
+    <link rel="stylesheet" href="https://cityofphiladelphia.github.io/vizwit/styles/main.css">
   </head>
   <body>
     <div class="header-container">
@@ -27,6 +27,6 @@
       </script>
     </div>
 
-    <script src="http://localhost:8080/scripts/vizwit-onpage.js"></script>
+    <script src="https://cityofphiladelphia.github.io/vizwit/scripts/vizwit-onpage.js"></script>
   </body>
 </html>
