--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body>
     <div class="header-container">
         <div class="container" id="page-header">
-            <h1 class="title">{{ page.title }}</h1>
+            <h1 class="title">{{ page.name }}</h1>
             <p class="description">{{ page.description }}</p>
         </div>
     </div>
