--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>VizWit</title>
+    <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -25,10 +25,19 @@
     <!-- End Google Tag Manager --> 
     
     <div class="header-container">
-        <div class="container" id="page-header">
-            <h1 class="title">{{ page.name }}</h1>
+      <div class="container" id="page-header">
+        <div class="row">
+          <div class="col-sm-10">
+            <h1 class="title">{{ page.title }}</h1>
             <p class="description">{{ page.description }}</p>
+          </div>
+          <div class="col-sm-2">
+            <div class="btn-group pull-right navigation" role="group">
+              <a href="{{ page.download }}" class="btn btn-default">Download</a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="container">
